--- a/Project2/project2/media/styles/styles.css
+++ b/Project2/project2/media/styles/styles.css
@@ -1,16 +1,22 @@
-body{
+*{
+    margin-left:0;
+}
+body :not(footer, nav, a){
     margin-left: 50px;
     margin-right: 50px;
+}
+body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: black;
     color: white;
 }
 nav{
-    padding-top: 80px;
+    padding-top: 83px;
     display: flex;
+    padding-right: 30px;
     flex-direction: column;
-    width: 20vw;
-
+    width: 100%;
+    text-align: center;
 }
 a{
     padding-top: 2px;
@@ -18,7 +24,6 @@ a{
     font-size: 20px;
     background-color: darkgreen;
     color: black;
-    border: 5px black;
 }
 a:hover{
     color: black;
@@ -27,18 +32,45 @@ a:hover{
 a:visited{
     color: black;
 }
-
 .grid-container{
     display: grid;
     grid-template:
     "item-1 item-2";
+
 }
-h1{
+h2{
     text-align: center;
+    font-size: 30px;
 }
 img{
     width: 100%;
 }
 p{
     font-size: 20px;
+}
+h1{
+    text-align: center;
+    font-size: 40px;
+}
+footer {
+    position: fixed;
+    bottom:0;
+    width: 100%;
+    height:20px;
+    background: darkgreen;
+    color : black;
+    text-align: center;
+
+
+}
+@media only screen and (max-width: 1000px){
+    .grid-container{
+        grid-template:
+                "item-1"
+                "item-2";
+    }
+    nav{
+        width: 100%;
+        padding-top: 0;
+    }
 }
